--- a/ui/package.json
+++ b/ui/package.json
@@ -1,34 +1,54 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "ui",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@coreui/coreui": "^2.1.12",
+		"@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+		"@coreui/icons": "0.3.0",
+		"@coreui/react": "^2.5.1",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"bootstrap": "^4.3.1",
+		"chart.js": "^2.8.0",
+		"classnames": "^2.2.6",
+		"core-js": "^3.1.4",
+		"enzyme": "^3.10.0",
+		"enzyme-adapter-react-16": "^1.14.0",
+		"flag-icon-css": "^3.3.0",
+		"font-awesome": "^4.7.0",
+		"node-sass": "^4.14.0",
+		"prop-types": "^15.7.2",
+		"react": "^16.13.1",
+		"react-app-polyfill": "^1.0.1",
+		"react-dom": "^16.13.1",
+		"react-router-config": "^5.0.1",
+		"react-router-dom": "^5.0.1",
+		"react-scripts": "3.4.1",
+		"react-test-renderer": "^16.8.6",
+		"reactstrap": "^8.0.0",
+		"simple-line-icons": "^2.4.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
